examples/test/testpolicy10680.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10680
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key28: value22
      key27: value8
      key46: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value2
          key15: value44
      podSelector:
        matchLabels:
          key39: value17
          key14: value48
          key12: value18
